style.css
/* ... */
.text-wrap {
    display: block;
    text-align: center;
}



/* === RESPONSIVENESS: TABLET === */
@media only screen and (max-width: 1024px) {
    section#projects > .container {
        max-width: 100%;
    }

    section#projects > .grid {
        grid-template-columns: 40% 60%;
        grid-template-rows: 1fr;
        column-gap: 40px;
    }

    section#projects > .container > .col {
        flex-wrap: wrap;
    }

    section#projects > .container > .col:first-child {
        width: calc(100% - 40px);
    }

    img#compass {
        right: -180px;
    }

    section#projects > .container > .col:last-child {
        width: calc(100% - 40px);
    }
}

/* === RESPONSIVENESS: MOBILE === */
@media only screen and (max-width: 767px) {
    section#projects {
        padding: 0px 20px;
    }

    section#projects > .grid {
        grid-template-columns: 1fr;
        grid-template-rows: 2fr;
        column-gap: 0px;
        row-gap: 20px;
    }

    section#projects > .container {
        padding-top: 0px;
        padding-bottom: 60px;
    }

    section#projects > .container > .col:first-child::after {
        top: 0px;
    }

    /* Hides the Compass Column */
    section#projects > .container > .col:first-child {
        display: none;
        width: 100%;
    }

    img#compass {
        top: 0px;
        right: unset;
        height: 300px;
        width: 300px;
     }

    section#projects > .container > .col:last-child {
        width: 100%;
    }

    div#project-carousel {
        height: 300px;
    }

    ul.project-carousel_track {
        height: 300px;
    }

    .project_item {
        height: 100%;
    }

    a.item {
        height: 210px;
    }

    .project_item.current-item a.item {
        font-size: 40px;
    }
}



/* ========= PAPER TEARS SECTION CSS ========= */
section.paper-tear {
    margin-top: 0px;
    margin-bottom: -22px;
    background-image: url("images/paper-tear.png");
    background-position: center bottom;
    background-attachment: scroll;
    background-repeat: repeat-x;
    background-size: 1200px;
    z-index: 1;
}

section.paper-tear > .container {
    padding: 0px 0px 0px 0px;
}

section.paper-tear .spacer {
    min-height: 50px;
    transition: min-height .3s ease;
}

@media only screen and (max-width: 1024px) {
    section.paper-tear {
        margin-bottom: -18px;
    }
}

@media only screen and (max-width: 767px) {
    section.paper-tear {
        margin-bottom: -20px;
    }
}



/* ========= CALL TO ACTION SECTION CSS ========= */

section#cta {
    justify-content: center;
    align-items: center;
    height: auto;
    min-height: 90vh;
    padding: 0px 0px 60px 0px;
    background: #7f978c;
    background-image: url("images/cta_background-image.jpg");
    background-position: center center;
    background-attachment: fixed;
    background-repeat: no-repeat;
    background-size: cover;
}

section#cta::before {
    content: "";
    display: block;
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-image: linear-gradient(
        180deg,
        rgba(255,255,255,0) 66%,
        rgba(255,255,255,1) 100%
    );
}

h2.cta-text_sub {
    font-family: "Montserrat", sans-serif;
    font-size: 18px;
    font-weight: 400;
    text-transform: uppercase;
    line-height: 1em;
    word-spacing: 3px;
    position: relative;
    padding: 5px 10px;
    box-shadow: 0px 0px 15px #00000066;
    background-color: rgba(255,255,255,.85);
    mix-blend-mode: screen;
}

h2.cta-text_sub::before {
    content: "";
    display: block;
    position: absolute;
    top: 0;
    right: -14px;
    height: 28px;
    width: 14px;
    clip-path: polygon(0 0, 0% 100%, 60% 50%);
    background-color: rgba(255,255,255,.85);
}

h2.cta-text_sub::after {
    content: "";
    display: block;
    position: absolute;
    top: 0;
    right: -42px;
    height: 28px;
    width: 28px;
    clip-path: polygon(0 0, 75% 0%, 100% 50%, 75% 100%, 0 100%, 25% 50%);
    background-color: rgba(255,255,255,.85);
}

h2.cta-text_main {
    font-family: "Teko", sans-serif;
    font-size: 136px;
    font-weight: 700;
    text-transform: uppercase;
    text-shadow: 0px 0px 15px #00000066;
    color: #e2c4a2;
    mix-blend-mode: overlay;
    filter: brightness(110%) contrast(200%);
}

p.cta-text_body {
    color: #fff;
}

@media only screen and (max-width: 1024px) {
    section#cta {
        justify-content: flex-start;
        background-position: 77% center;
        background-attachment: scroll;
        min-height: 75vh;
    }

    h2.cta-text_main {
        font-size: 112px;
    }
}

@media only screen and (max-width: 767px) {
    section#cta {
        background-attachment: scroll;
        min-height: 60vh;
    }

    h2.cta-text_sub::before {
        height: 27px;
        width: 14px;
    }

    h2.cta-text_sub::after {
        right: -38px;
        height: 27px;
        width: 27px;
    }

    h2.cta-text_sub {
        font-size: 16px;
    }

    h2.cta-text_main {
        font-size: 64px;
    }
}



/* ========= FOOTER SECTION CSS ========= */

footer#footer {
    justify-content: center;
    align-items: center;
    margin-top: -60px;
}

footer#footer > .container {
    grid-template-columns: 1fr 1fr 1fr;
}

footer#footer > .container > .col {
    align-items: center;
}

footer#footer h6 {
    text-transform: uppercase;
    margin-bottom: 10px;
}

footer#footer .email {
    /* font-family: "Teko", sans-serif; */
    font-size: 12px;
    font-weight: 600;
    text-transform: uppercase;
    text-shadow: 0px 0px 10px #00000033;
    color: var(--highlight-color);
}

.container.social-media {
    flex-flow: row nowrap;
    justify-content: center;
    align-items: center;
    column-gap: 10px;
    max-width: 100%;
    padding: 0px;
}

.github_svg, .instagram_svg, .linkedin_svg {
    height: 1.25rem;
}

@media only screen and (max-width: 1024px) {

}
/* ... */

